<resources>
    <string name="app_name">DaVinci</string>

    <string name="Splash_Screen">Da-Vinci App</string>
    <string name="send_mail_to_devoleper">Mail an Entwickler</string>
    <string name="delete_yearbook">Lösche Jahrbücher</string>
    <string name="welcome_text">Hallo,\n \n in den Einstellungen können Sie Ihre Klasse auswählen. \n Ebenso können Sie den Vertretungsplan oder Stundenplan einsehen.</string>
    <string name="login">Einloggen</string>
    <string name="Splash_Scree_text">Damit keine Unbefugten die Stundenpläne und Vertretungspläne einsehen, müssen hier Username und Passwort des geschützten Bereiches der Schulhomepage eingegeben werden.</string>

    <string name="class_not_saved">Klasse noch nicht eingestellt!</string>
    <string name="no_internet">Kein Internet..</string>
    <string name="homework">Hausaufgaben der Klasse: </string>

    <string name="navigation_drawer_startseite">Startseite</string>
    <string name="navigation_drawer_stundenplan">Stundenplan</string>
    <string name="navigation_drawer_vertretungsplan">Vertretungsplan</string>
    <string name="navigation_drawer_noten">Noten</string>
    <string name="navigation_drawer_website">Webseite</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_settings">Einstellungen</string>

    <string name="time">Vertretungsplan Update Intervall</string>

    <string name="klasse">Klasse Auswählen</string>

    <string name="pref_header_general">Allgemein</string>

    <string name="pref_header_school_wifi">Schul-WLAN</string>

    <string name="manually_update_time_table">Nach neuem Stundenplan suchen</string>

    <string-array name="fächer">
        <item>Deutsch</item>
        <item>Englisch</item>
        <item>Mathe</item>
        <item>Französisch</item>
        <item>Physik</item>
        <item>Chemie</item>
        <item>Kunst</item>
        <item>Musik</item>
    </string-array>


    <string-array name="klassen_title">
        <item>7a</item>
        <item>7b</item>
        <item>7c</item>
        <item>7d</item>
        <item>8a</item>
        <item>8b</item>
        <item>8c</item>
        <item>8d</item>
        <item>9.1</item>
        <item>9.2</item>
        <item>9.3</item>
        <item>9.4</item>
        <item>9.5</item>
        <item>10.1</item>
        <item>10.2</item>
        <item>10.3</item>
        <item>10.4</item>
        <item>10.5</item>
        <item>11a</item>
        <item>11b</item>
        <item>11c</item>
        <item>12a</item>
        <item>12b</item>
        <item>12c</item>
        <item>13a</item>
        <item>13b</item>
        <item>13c</item>
    </string-array>
    <string-array name="klassen_values">
        <item>7a</item>
        <item>7b</item>
        <item>7c</item>
        <item>7d</item>
        <item>8a</item>
        <item>8b</item>
        <item>8c</item>
        <item>8d</item>
        <item>9.1</item>
        <item>9.2</item>
        <item>9.3</item>
        <item>9.4</item>
        <item>9.5</item>
        <item>10.1</item>
        <item>10.2</item>
        <item>10.3</item>
        <item>10.4</item>
        <item>10.5</item>
        <item>11a</item>
        <item>11b</item>
        <item>11c</item>
        <item>12a</item>
        <item>12b</item>
        <item>12c</item>
        <item>13a</item>
        <item>13b</item>
        <item>13c</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="time_titles">
        <item>15 Minuten</item>
        <item>30 Minuten</item>
        <item>1 Stunde</item>
        <item>3 Stunden</item>
        <item>6 Stunden</item>
        <item>Nie</item>
    </string-array>
    <string-array name="time_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_stundenplan">Stundenplan</string>
    <string name="title_activity_vertretungsplan">Vertretungsplan</string>
    <string name="title_activity_noten">Noten</string>
    <string name="title_activity_website">Website</string>
    <string name="title_activity_hausaufgaben">Hausaufgaben</string>
    <string name="title_activity_test">Settings</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>


    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>


    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">298462201111-lv4qd0e4bl7qk7at6qhkqvo8bbnpfvus.apps.googleusercontent.com</string>
    <string name="title_activity_login">Einloggen</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Einloggen</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_team">Team</string>
    <string name="navigation_drawer_team">Team</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_jahrbuch">Jahrbuch</string>
    <string name="navigation_drawer_jahrbuch">Jahrbuch</string>
    <string name="title_activity_pdf_jahrbuch">PDFViewer</string>
    <string name="wifi_button">Schul-WLAN hinzufügen</string>
    <string name="title_activity_statistics">Statistik</string>
    <string name="navigation_drawer_statistics">Statistik</string>

</resources>
